add path file to CSV file

--- a/fileorganizer.ipynb
+++ b/fileorganizer.ipynb
@@ -20,12 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fileinput\n",
     "import csv\n",
+    "import os\n",
     "\n",
     "class dataFile(object):\n",
     "    def __init__(self, name, type, size): \n",
@@ -37,8 +38,9 @@
     "        print(self.name, self.type, self.size)\n",
     "\n",
     "class fileCSV(object):\n",
-    "    def __init__(self, namefile): \n",
-    "        self.namefile = namefile \n",
+    "    def __init__(self, path): \n",
+    "        self.namefile = os.path.basename(path)\n",
+    "        self.path = path\n",
     "\n",
     "    def updateListDataInCsv(self, item):\n",
     "        with fileinput.input(files=(self.namefile), inplace=True, mode='r') as f:\n",
@@ -52,7 +54,7 @@
     "    def appendDataItem(self, item):\n",
     "        fields=[item.name, item.type, str(item.size)]\n",
     "        # fields=['first','second','third']\n",
-    "        with open(self.namefile, 'a',  newline='') as f:\n",
+    "        with open(self.path, 'a',  newline='') as f:\n",
     "            writer = csv.writer(f)\n",
     "            writer.writerow(fields)\n",
     "\n",
@@ -68,8 +70,7 @@
     "item1 = dataFile(\"ciao\", \"test\", 788)\n",
     "item2 = dataFile(\"pluto\", \"image\", 46)\n",
     "item3 = dataFile(\"ciao\", \"testo\", 68)\n",
-    "myCsvFile = fileCSV(\"recap-2.csv\")\n",
-    "# myCsvFile.updateListDataInCsv(item1)\n",
+    "myCsvFile = fileCSV(\"files/recap-2.csv\")\n",
     "myCsvFile.createNewCSV()\n",
     "myCsvFile.appendDataItem(item1)\n",
     "myCsvFile.appendDataItem(item2) \n",
@@ -78,17 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Users\\skimmer\\AppData\\Local\\Programs\\Python\\Python36\\python.exe' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/skimmer/AppData/Local/Programs/Python/Python36/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bw type:image size94926B\n",
+      "ciao type:docs size0B\n",
+      "daffodil type:image size24657B\n",
+      "eclipse type:image size64243B\n",
+      "pippo type:docs size8299B\n",
+      "song1 type:audio size1087849B\n",
+      "song2 type:audio size764176B\n",
+      "trump type:image size10195B\n"
      ]
     }
    ],
@@ -199,8 +204,7 @@
     "def getFileName(filename):\n",
     "    return os.path.join(\"files\", filename)\n",
     "\n",
-    "# loopFilesFolder()\n",
-    "fileOrganizer = FileOrganizer(\"files\", \"recap-test.csv\")\n",
+    "fileOrganizer = FileOrganizer(\"files\", \"files/recap.csv\")\n",
     "fileOrganizer.loopFilesFolder()\n",
     "\n"
    ]
@@ -310,14 +314,11 @@
     }
    ],
    "source": [
-    "# Imports PIL, tabulate and numpy modules\n",
+    "# Import PIL, tabulate and numpy modules\n",
     "from PIL import Image\n",
     "from tabulate import tabulate\n",
     "import numpy as np\n",
     "  \n",
-    "# open method used to open different extension image file\n",
-    "pathToImage = \"C:\\\\Work\\\\pyWork\\\\files\\\\image\\\\eclipse.png\"\n",
-    "\n",
     "class ImageInfo(object):\n",
     "    imageName = \"\"\n",
     "    h = 0\n",
@@ -409,7 +410,6 @@
     "        pathToImageFolder =  os.path.join(pwd, \"files\",\"image\")\n",
     "        for filename in os.listdir(pathToImageFolder):\n",
     "            f = os.path.join(pathToImageFolder, filename)\n",
-    "            # checking if it is a file\n",
     "            iminfo = ImageInfo(f)\n",
     "            d = iminfo.getAllinfo()\n",
     "            data.append(d)\n",
@@ -431,31 +431,6 @@
     "- se l'immagine è a colori, le altre colonne indicano la media dei valori di ogni livello di colore.\n",
     "\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+----------+\n",
-      "| name   |   height |\n",
-      "+========+==========+\n",
-      "| image1 |       23 |\n",
-      "+--------+----------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tabulate import tabulate\n",
-    "data = [[\"name\", \"height\", \"width\",\"grayscale\",\"R\",\"G\",\"B\",\"ALPHA\"],\n",
-    "        [\"image1\", 23]]\n",
-    "table1 =  tabulate(data, headers='firstrow',tablefmt='grid')\n",
-    "print(table1)\n"
    ]
   },
   {
