fix bug with the update csv path

--- a/fileorganizer.ipynb
+++ b/fileorganizer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "        self.path = path\n",
     "\n",
     "    def updateListDataInCsv(self, item):\n",
-    "        with fileinput.input(files=(self.namefile), inplace=True, mode='r') as f:\n",
+    "        with fileinput.input(files=(self.path), inplace=True, mode='r') as f:\n",
     "            reader = csv.DictReader(f)\n",
     "            print(\",\".join(reader.fieldnames))  # print back the headers\n",
     "            for row in reader:\n",
@@ -61,44 +61,27 @@
     "    def createNewCSV(self):\n",
     "        headerList = ['name', 'type', 'size(B)']\n",
     "        # open CSV file and assign header\n",
-    "        with open(self.namefile, 'w', newline='') as file:\n",
+    "        with open(self.path, 'w', newline='') as file:\n",
     "            dw = csv.DictWriter(file, delimiter=',', \n",
     "                                fieldnames=headerList)\n",
-    "            dw.writeheader()\n",
-    "\n",
-    "\n",
-    "item1 = dataFile(\"ciao\", \"test\", 788)\n",
-    "item2 = dataFile(\"pluto\", \"image\", 46)\n",
-    "item3 = dataFile(\"ciao\", \"testo\", 68)\n",
-    "myCsvFile = fileCSV(\"files/recap-2.csv\")\n",
-    "myCsvFile.createNewCSV()\n",
-    "myCsvFile.appendDataItem(item1)\n",
-    "myCsvFile.appendDataItem(item2) \n",
-    "myCsvFile.appendDataItem(item3)       "
+    "            dw.writeheader()   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bw type:image size94926B\n",
-      "ciao type:docs size0B\n",
-      "daffodil type:image size24657B\n",
-      "eclipse type:image size64243B\n",
-      "pippo type:docs size8299B\n",
-      "song1 type:audio size1087849B\n",
-      "song2 type:audio size764176B\n",
-      "trump type:image size10195B\n"
+      "c:\\Users\\stefa\\Downloads\\FileOrganizer\\files\\recap.csv\n",
+      "testo3 type:docs size0B\n"
      ]
     }
    ],
    "source": [
-    "#FILL ME\n",
     "import json\n",
     "import re\n",
     "import os\n",
@@ -119,6 +102,7 @@
     "        # create a new file only if it's not present already\n",
     "        pwd = os.path.abspath(os.getcwd())\n",
     "        pathToCSVFile = os.path.join(pwd, csvname)\n",
+    "        print(pathToCSVFile)\n",
     "        if os.path.exists(pathToCSVFile) == False:\n",
     "            self.csvFile.createNewCSV()    \n",
     "             \n",
@@ -174,7 +158,7 @@
     "    def loopFilesFolder(self):\n",
     "        pwd = os.path.abspath(os.getcwd())\n",
     "        pathToFiles =  os.path.join(pwd, self.mainfolder)\n",
-    "        for filename in os.listdir(pathToFiles):\n",
+    "        for filename in sorted(os.listdir(pathToFiles)):\n",
     "            f = os.path.join(pathToFiles, filename)\n",
     "            # checking if it is a file\n",
     "            self.handleFile(f)  \n",
@@ -204,29 +188,9 @@
     "def getFileName(filename):\n",
     "    return os.path.join(\"files\", filename)\n",
     "\n",
-    "fileOrganizer = FileOrganizer(\"files\", \"files/recap.csv\")\n",
+    "fileOrganizer = FileOrganizer(\"files\", \"files\\\\recap.csv\")\n",
     "fileOrganizer.loopFilesFolder()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "**TODO LIST**\n",
-    "\n",
-    "**Create new CSV**\n",
-    "* Create new CSV if is not already present\n",
-    "* Create the list NAME TYPE SIZE\n",
-    "* save the list in the created CSV file\n",
-    "\n",
-    "**Update CSV**\n",
-    "* open the CSV file and put the content in a list\n",
-    "* update the list with the new info\n",
-    "* re-save the list in the existing CSV file\n",
-    "\n",
-    "Also before move a file, check if the file is the same. Otherwise no move and no CSV update\n"
    ]
   },
   {
